Làm giao diện trang Wishlist và Contact
Oke chưa

--- a/public/frontend/css/core-style.css
+++ b/public/frontend/css/core-style.css
@@ -876,6 +876,13 @@ img {
   position: relative;
   z-index: 1; }
   .pagination .page-item .page-link {
+
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+
+.pagination .page-item .page-link {
     width: 40px;
     height: 40px;
     border: 1px solid #ebebeb;
@@ -1671,6 +1678,10 @@ img {
       color: rgba(0, 0, 0, 0.6); }
 
 /* :: 17.0 Contact Area CSS */
+.contact-header {
+    font-size: 3rem;
+    text-align: center; 
+  }
 .contact-area {
   position: relative;
   z-index: 1;
@@ -1748,7 +1759,87 @@ img {
           font-weight: 300; }
           .contact-area .contact-info .contact-address p:last-child a:hover {
             color: #0315ff; }
-
+    
+  .contact-area .form {
+    width: 60%;
+    margin: 0 auto;
+  }
+  
+  .contact-area .form h1 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .contact-area .form form {
+    padding: 20px;
+    border: 1px solid #ccc;
+  }
+  
+  .contact-area .form form input[type="text"],
+  .contact-area .form form input[type="email"],
+  .contact-area .form form input[type="tel"],
+  .contact-area .form form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+  
+  .contact-area .form form textarea {
+    height: 100px;
+  }
+  
+  .contact-area .form form button {
+    background-color: #000000;
+    color: white;
+    padding: 15px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .contact-area .contact-info {
+    width: 100%;
+    padding: 50px 5%;
+  }
+  
+  .contact-area .contact-info h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: #000000;
+  }
+  
+  .contact-area .contact-info p {
+    font-size: 16px;
+    font-weight: 300;
+    color: #000000;
+  }
+  
+  .contact-area .contact-info .contact-address p {
+    font-size: 12px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #000000; 
+  
+  .contact-area .contact-info .contact-address p span {
+    font-weight: 600;
+    color: #000000;
+    width: 100px;
+    display: inline-block;
+    text-transform: uppercase;
+  }
+  
+  .contact-area .contact-info .contact-address p:last-child {
+    margin-top: 100px;
+  }
+  
+  .contact-area .contact-info .contact-address p:last-child a {
+    font-size: 14px;
+    font-weight: 300;
+    color: #000000;
+  }
+  
+  .contact-area .contact-info .contact-address p:last-child a:hover {
+    color: #0315ff;
+  }
 /* ##### The End ##### */
-
-/*# sourceMappingURL=core-style.css.map */
