--- a/public/frontend/css/core-style.css
+++ b/public/frontend/css/core-style.css
@@ -321,7 +321,10 @@ img {
 
 /* :: 4.0 Header Area CSS */
 #headerSearch {
-    background-color: #7fa1c3;
+    background-color: black;
+    color: white;
+}
+#headerSearch::placeholder {
     color: white;
 }
 
@@ -337,7 +340,7 @@ img {
 }
 
 .classy-nav-container {
-    background-color: #7fa1c3;
+    background-color: black;
 }
 
 @media only screen and (max-width: 767px) {
@@ -495,6 +498,9 @@ img {
     color: #787878;
     font-size: 14px;
 }
+.header_area .search-area form button i {
+    color: white;
+}
 
 @media only screen and (max-width: 767px) {
     .header_area .search-area form button {
@@ -543,7 +549,7 @@ img {
 .header_area .cart-area a span {
     font-family: "Ubuntu", sans-serif;
     font-size: 18px;
-    color: #0315ff;
+    color: red;
     font-weight: 700;
     position: absolute;
     top: -10px;
@@ -1630,7 +1636,7 @@ hr {
 .footer_area {
     position: relative;
     z-index: 1;
-    background-color: #252525;
+    background-color: black;
     padding: 70px 0 60px;
 }
 
@@ -1640,7 +1646,7 @@ hr {
 }
 
 .footer_area .single_widget_area .footer_menu ul li a {
-    font-size: 18px;
+    font-size: 15px;
     color: white;
     display: block;
     font-family: "Ubuntu", sans-serif;
@@ -1650,17 +1656,13 @@ hr {
 
 .footer_area .single_widget_area .footer_menu ul li a:hover,
 .footer_area .single_widget_area .footer_menu ul li a:focus {
+    color: black;
+    font-size: 17px;
     color: #ffffff;
 }
-
-.footer_area .single_widget_area .footer_widget_menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+.footer_area .single_widget_area .footer_widget_menu{
+    float: right;
 }
-
 .footer_area .single_widget_area .footer_widget_menu li {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 50%;
@@ -1671,16 +1673,20 @@ hr {
 .footer_area .single_widget_area .footer_widget_menu li a {
     display: block;
     font-size: 12px;
-    color: rgba(255, 255, 255, 0.6);
+    color: white;
     display: block;
     font-weight: 400;
     margin-bottom: 10px;
 }
+#input-mail::placeholder {
+    color: white;
+}
 
 .footer_area .single_widget_area .footer_widget_menu li a:hover,
 .footer_area .single_widget_area .footer_widget_menu li a:focus {
-    color: black;
+    font-size: 14px;
 }
+
 
 .footer_area .single_widget_area .footer_heading h6 {
     color: #ffffff;
@@ -1694,7 +1700,9 @@ hr {
     z-index: 1;
     width: 270px;
 }
-
+.footer_area .single_widget_area .subscribtion_form{
+    float: left;
+}
 @media only screen and (max-width: 767px) {
     .footer_area .single_widget_area .subscribtion_form form {
         margin-bottom: 50px;
@@ -1705,12 +1713,12 @@ hr {
     width: 100%;
     border: none;
     border-bottom: 2px solid rgba(255, 255, 255, 0.6);
-    color: rgba(255, 255, 255, 0.6);
+    color: white;
     font-size: 12px;
     height: 35px;
     background-color: transparent;
+    outline: none; 
 }
-
 .footer_area .single_widget_area .subscribtion_form form input:focus {
     border-bottom-color: #ffffff;
     color: #ffffff;
@@ -1736,7 +1744,6 @@ hr {
     font-size: 16px;
     float: right;
 }
-
 /* :: 12.0 Breadcumb Area CSS */
 .breadcumb_area {
     position: relative;
