--- a/public/frontend/css/single-product-details.css
+++ b/public/frontend/css/single-product-details.css
@@ -1,12 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
+.container-detail-product{
     font-family: Arial, sans-serif;
-    padding: 20px;
+    padding: 10px;
 }
 
 .product-detail-container {
