làm giao diện trang search
làm giao diện trang search

--- a/public/frontend/css/core-style.css
+++ b/public/frontend/css/core-style.css
@@ -419,6 +419,7 @@ img {
     color: #000000;
 }
 
+
 .header_area .search-area form {
     position: relative;
     z-index: 1;
@@ -503,6 +504,7 @@ img {
     }
 }
 
+.header_area .search-area a,
 .header_area .favourite-area a,
 .header_area .user-login-info a,
 .header_area .cart-area a {
@@ -520,7 +522,7 @@ img {
 }
 
 @media only screen and (max-width: 767px) {
-
+    .header_area .search-area a,
     .header_area .favourite-area a,
     .header_area .user-login-info a,
     .header_area .cart-area a {
@@ -532,12 +534,14 @@ img {
     }
 }
 
+.header_area .search-area a img,
 .header_area .favourite-area a img,
 .header_area .user-login-info a img,
 .header_area .cart-area a img {
     max-width: 20px;
 }
 
+.header_area .search-area a span,
 .header_area .favourite-area a span,
 .header_area .user-login-info a span,
 .header_area .cart-area a span {
@@ -550,7 +554,7 @@ img {
 }
 
 @media only screen and (max-width: 767px) {
-
+    .header_area .search-area a span,
     .header_area .favourite-area a span,
     .header_area .user-login-info a span,
     .header_area .cart-area a span {
