Chỉnh sửa gd admin2
chỉnh sửa giao diện admin và leftslidebar

--- a/public/css/custom-style-addstaff.css
+++ b/public/css/custom-style-addstaff.css
@@ -36,6 +36,6 @@
 }
 
 .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: #071b31;
+    border-color: #313840;
 }
