--- a/public/frontend/css/pagination.css
+++ b/public/frontend/css/pagination.css
@@ -22,3 +22,50 @@
     background-color: #000;
     color: #fff;
 }
+
+.pagination {
+    position: relative;
+    z-index: 1;
+
+}
+
+.pagination .page-item .page-link {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ebebeb;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 38px;
+    padding: 0;
+    text-align: center;
+    color: #787878;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination .page-item .page-link:hover,
+.pagination .page-item .page-link:focus {
+    color: #000000;
+    box-shadow: none;
+}
+
+.pagination .page-item:first-child {
+    margin-right: 15px;
+}
+
+.pagination .page-item:first-child .page-link {
+    margin-left: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.pagination .page-item:last-child {
+    margin-left: 15px;
+}
+
+.pagination .page-item:last-child .page-link {
+    margin-left: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
