--- a/public/frontend/css/popup.css
+++ b/public/frontend/css/popup.css
@@ -47,7 +47,7 @@
     align-items: center;
 }
 .popup .register{
-    height: 330px;
+    height: 370px;
 }
 
 .popup-content {
@@ -104,10 +104,15 @@ button:hover {
     background-color: #aea6a6;
 }
 
-#forgotpassButton {
-    height: 10px;
-    padding: 10px;
-    white-space: nowrap;
-    line-height: 1 !important;
+.parent{
+    margin-left: 7px;
     text-decoration: underline;
 }
+.parent-link {
+    all: unset !important;
+}
+.parent-link:hover{
+    color: #aea6a6 !important;
+    cursor: pointer !important;
+}
+
