--- a/public/frontend/css/rating-product.css
+++ b/public/frontend/css/rating-product.css
@@ -53,7 +53,6 @@
     flex-direction: column;
     gap: 20px;
 }
-
 .product-item {
     display: flex;
     align-items: center;
@@ -97,4 +96,31 @@
     border-radius: 5px;
     margin-bottom: 50px;
     width: 65vw;
+}
+
+@media only screen and (max-width: 767px) {
+    .product-item {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .product-image {
+        width: 200px;
+        height: 200px;
+        margin-left: 0;
+    }
+
+    .product-info {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .description {
+        width: 90vw;
+        height: 200px;
+    }
+
+    .rating {
+        justify-content: center;
+    }
 }
